--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body{
 }
 
 
-.photo-overlay:hover h1{
+#photo-overlay:hover h1{
     transform:translateX(0px);
 }
 #education{
@@ -53,7 +53,7 @@ body{
 
 }
 
-#education:hover{
+.uni:hover{
     box-shadow:0 10px 30px rgba(0, 0, 0, 0.55); 
     transition: box-shadow .5s;
 }
@@ -84,6 +84,7 @@ h1{
      
 }
 .uni{
+   
     height: 500px;
     margin-left: 20px;
     margin-right: auto;
@@ -118,9 +119,13 @@ h3{
     transform:translateX(120px) ;
     transition: transform 1s;
 }
-.emj{
 
-}
 #main:hover .emoji{
     transform:translateX(0px);
+}
+.second{
+    position:relative;
+   
+    transform:translateX(120px) ;
+    transition: transform 1s; 
 }
