--- a/styles.css
+++ b/styles.css
@@ -22,14 +22,8 @@ body{
     transition: box-shadow .5s;
 
 }
-#photo-overlay{
-   
-    position: absolute; 
-    top:0;
-    bottom: 0;
-    left:0;
-    right:0;
-}
+
+
 
 #mts{
 
@@ -45,6 +39,7 @@ body{
     transform:translateX(0px);
 }
 #education{
+    margin-right: 100vh;
     position:relative;
     margin-top:20px;
     border-radius:15px;
@@ -53,18 +48,23 @@ body{
 
 }
 
+
 .uni:hover{
     box-shadow:0 10px 30px rgba(0, 0, 0, 0.55); 
     transition: box-shadow .5s;
 }
+.oly{
 
+}
 
 
 #work{
+   padding-top:25px;
+    overflow:hidden;
     width: 500px;
     height: 500px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 90vh;
+    margin-right: 0;;
     position:relative;
     margin-top: 15px;
 
@@ -123,9 +123,34 @@ h3{
 #main:hover .emoji{
     transform:translateX(0px);
 }
+.first{
+    border-radius: 5px;
+    background-color:lightblue;
+    position: absolute; 
+    bottom: 0;
+    left:0;
+    right:500;
+    color:black;
+    transform:translateX(-320px) ;
+    transition: transform 1s; 
+}
 .second{
-    position:relative;
-   
-    transform:translateX(120px) ;
+    border-radius: 5px;
+    background-color:lightblue;
+    position: absolute; 
+    bottom: 0;
+    left:0;
+    right:500;
+    color:black;
+    transform:translateX(620px) ;
+    transition: transform 1s; 
+}
+
+#education:hover .second{
+    transform:translateX(0px);
+    transition: transform 1s;
+}
+#work:hover .first{
+    transform:translateX(0px);
     transition: transform 1s; 
 }
