--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body{
     width: 800px;
     height: 500px;
     margin-left: 20px;
-    margin-right: auto;
+    margin-right:auto;
     position:relative;
     top:10px;
     bottom:35px;
@@ -139,7 +139,7 @@ h3{
     background-color:lightblue;
     position: absolute; 
     bottom: 0;
-    left:0;
+    left:20px;
     right:500;
     color:black;
     transform:translateX(620px) ;
